methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:78: error: Unmatched closing brace '}' ignored here
}
^